# swagger-output.json
@@ -21,6 +21,19 @@
         }
       }
     },
+    "/api/send-plain-email": {
+      "post": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
     "/api/auth/signUp": {
       "post": {
         "description": "",
